started changing home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -174,7 +174,7 @@
             <img src='<%= image_path "boris.jpg" %>' alt="" class="avatar-large">
             <h3>Boris Paillard</h3>
             <p class="status"> CEO of LeWagon</p>
-            <p>Boris Paillard is the CEO of the french coding bootcamp LeWagon. He decided to use the services of Seeedr to enhance his office."LeWagon is a coding bootcamp aiming at training developpers in 9 weeks. Creativity is very important for developpers and having great offices can help to unleash creativity of our students. The Parisian office is also the flagship of LeWagon’s brand, so it’s very important to have great workplace that makes you want to join our school. Seeedr is a great tools to help you rent art from young artist, your only job is to select the right Artist, and that's all. They take car of all the logistic and the artwork's installation."</p>
+            <p>Boris Paillard, the CEO of LeWagon: "The Parisian office is the flagship of LeWagon’s brand, so it’s very important to have a great workplace that makes you want to join our school. Itis also important for us to break the idea that people code in their room or in their garage. Developpers need a creative environment to give their best, and art definitely makes a difference. Not only alumnis work here, since we organize once a week conferences/meetups/apero-talks. It is a good opportunity for alumnis to meet entrepreneurs and connect with the tech-eco-system. we have got great feedbacks from the people attending our conferences. We organize one conference a week in our offices Seeedr is a great tools to help you rent art from young artist, your only job is to select the right Artist, and that's all. They take car of all the logistic and the artwork's installation." LeWagon is a french coding bootcamp aiming at training developpers in 9 weeks</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
@@ -192,28 +192,22 @@
 <div class="wrapper padded-mini margin-bottom">
   <div class="container">
     <div class="row">
-      <h2 class="padded-total text-center" style="font-family: 'Basic', sans-serif;">Four reasons to work with us</h2>
+      <h2 class="padded-total text-center" style="font-family: 'Basic', sans-serif;">Top reasons to display artworks in your company</h2>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
-          <i class="fa fa-handshake-o" aria-hidden="true"></i>
+          <div><%= image_tag "puzzle.png" %></div>
           <p>Break down barriers and start creating social link </p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
-          <i class="fa fa-bullhorn" aria-hidden="true"></i>
+          <div><%= image_tag "megaphone.png" %></div>
           <p>State your company culture through Art</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
-          <i class="fa fa-leaf" aria-hidden="true"></i>
-          <p>Create an healthier work environment</p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-        <div class="key-step">
-          <i class="fa fa-rocket" aria-hidden="true"></i>
+          <div><%= image_tag "rocket3.png" %></div>
           <p>Unleash creativity of your teams and partners</p>
         </div>
       </div>
