new icons home and new speech boris

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -174,7 +174,8 @@
             <img src='<%= image_path "boris.jpg" %>' alt="" class="avatar-large">
             <h3>Boris Paillard</h3>
             <p class="status"> CEO of LeWagon</p>
-            <p>Boris Paillard, the CEO of LeWagon: "The Parisian office is the flagship of LeWagon’s brand, so it’s very important to have a great workplace that makes you want to join our school. Itis also important for us to break the idea that people code in their room or in their garage. Developpers need a creative environment to give their best, and art definitely makes a difference. Not only alumnis work here, since we organize once a week conferences/meetups/apero-talks. It is a good opportunity for alumnis to meet entrepreneurs and connect with the tech-eco-system. we have got great feedbacks from the people attending our conferences. We organize one conference a week in our offices Seeedr is a great tools to help you rent art from young artist, your only job is to select the right Artist, and that's all. They take car of all the logistic and the artwork's installation." LeWagon is a french coding bootcamp aiming at training developpers in 9 weeks</p>
+            <p>"The Parisian office is the flagship of LeWagon’s brand, so it’s the first entrance for people who want to work with us or join our coding school.
+            It is important for us to break the idea that people code in their room or in their garage. Developpers need a creative environment to give their best, and the possibility of changing our decoration every 3 months is an amazing way of doing so. Not only alumnis work here, since we organize once a week conferences/meetups/apero-talks. It is a good opportunity for alumnis to meet entrepreneurs and connect with the tech-eco-system. Art helps break down barriers and is now a new possible way to create social link. I like the idea of renting art from unknown talented artists and change my workplace in a real living art gallery. We just pick a new artist every 3 months and Seeedr takes care of the rest !"</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
@@ -201,14 +202,20 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
-          <div><%= image_tag "megaphone.png" %></div>
-          <p>State your company culture through Art</p>
+          <div><%= image_tag "rocket3.png" %></div>
+          <p>Unleash creativity of your teams and partners</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
-          <div><%= image_tag "rocket3.png" %></div>
-          <p>Unleash creativity of your teams and partners</p>
+          <div><%= image_tag "tax2.png" %></div>
+          <p>Flexible rental packages with attractive tax benefits</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <div><%= image_tag "megaphone.png" %></div>
+          <p>State your company culture through Art</p>
         </div>
       </div>
     </div>
