--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -37,6 +37,8 @@
   background-color: transparent;
   padding: 14px;
   margin-right: 15px;
+  color: $gray;
+  border-radius: 0;
 }
 
 .btn-new-black:hover {
