--- a/app/assets/stylesheets/pages/_payment_new.scss
+++ b/app/assets/stylesheets/pages/_payment_new.scss
@@ -7,9 +7,10 @@
 }
 
 .final-informations {
-  margin-left: 20px;
+    max-width: 420px;
+    margin: auto;
 }
 
-.final-informations i {
-
+.guarantees li {
+  margin: 0 20px;
 }
