--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,7 @@
 
-<div class="wrapper confirmation padded">
+<div class="wrapper confirmation text-center bg-grey padded-mini">
   <div class="crTitle padded-top">
-    <%= link_to root_path, class: "navbar-wagon-brand" do %>
-      <%= image_tag "logo.png" %>
-    <% end %>
-    <h1>Payment Confirmation</h1>
+    <h1 style="font-size: 2em;">Payment Confirmation</h1>
     <p><%= current_user.company_name %>, your payment to Seedr has been received!<br><br>
   </div>
   <div class="crReciept">
@@ -33,5 +30,8 @@
       75011, Paris<br>
     </p>
     <p>Questions about your order?<br>Contact us at: contact@seedr.com</p>
+  </div>
+  <div style="padding-bottom: 20px;" >
+    <%= link_to "Go back to home page", root_path, class: 'btn btn-new-black' %>
   </div>
 </div>
