video problem solved

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -179,8 +179,10 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="testimonial-content text-center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/tf_oIjOxS2I?ecver=1" frameborder="0" allowfullscreen></iframe>
+          <div class="testimonial-content iframe-container text-center">
+            <div>
+              <iframe src="https://www.youtube.com/embed/tf_oIjOxS2I?ecver=1" frameborder="0" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
