--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -140,7 +140,9 @@
                 <div class="col-xs-3"></div>
                 <div class="col-xs-6">
                   <p class="user-desc">
-                    <%= truncate(bid.user.description, 342) %>
+                    <% if bid.user.description %>
+                      <%= truncate(bid.user.description, 342) %>
+                    <% end %>
                   </p>
                 </div>
                 <div class="col-xs-2">
