--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<% content_for :body_id, "home" %>
 <!-- banner -->
 <div class="banner" style="background: linear-gradient(155deg, rgba(5, 5, 5, 0.6) 10%, rgba(5, 5, 5, 0.2) 80%), url('<%= image_path "office.jpg" %>');"></div>
 <div id="slideshow">
@@ -21,7 +22,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="smaller-box">
-        <h2 class="padded-mini text-center" style="font-family: 'Basic', sans-serif;">An easy process</h2>
+        <h2 class="padded-mini text-center">An easy process</h2>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
             <div><%= image_tag "create.png" %></div>
@@ -47,7 +48,7 @@
     </div>
   </div>
   <div class="text-center">
-    <%= link_to "read more", new_exhibition_path, class: "btn btn-primary btn-lg read" %>
+    <%= link_to "Read more", new_exhibition_path, class: "btn btn-primary btn-lg read" %>
   </div>
 </div>
 
@@ -56,7 +57,7 @@
 <div class="wrapper padded">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini" style="font-family: 'Basic', sans-serif;">Last Artworks from our Artist community</h2>
+      <h2 class="padded-mini">Last Artworks from our Artist community</h2>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content  ">
@@ -167,7 +168,7 @@
 <div class="wrapper padded-bottom bg-grey">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini" style="font-family: 'Basic', sans-serif;">Discover how le Wagon improved his workplace with us</h2>
+      <h2 class="padded-mini">Discover how le Wagon improved his workplace with us</h2>
       <div class="testimonial">
         <div class="col-sm-12 col-md-6">
           <div class="testimonial-content">
@@ -195,28 +196,28 @@
 <div class="wrapper padded-mini margin-bottom">
   <div class="container">
     <div class="row">
-      <h2 class="padded-total text-center" style="font-family: 'Basic', sans-serif;">Top reasons to display artworks in your company</h2>
+      <h2 class="padded-total text-center">Top reasons to display artworks in your company</h2>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-        <div class="key-step">
-          <div><%= image_tag "puzzle.png" %></div>
+        <div class="key-step reinsurance-icon">
+          <div><%= image_tag "001.png" %></div>
           <p>Break down barriers and start creating social link </p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-        <div class="key-step">
-          <div><%= image_tag "rocket3.png" %></div>
+        <div class="key-step reinsurance-icon">
+          <div><%= image_tag "002.png" %></div>
           <p>Unleash creativity of your teams and partners</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-        <div class="key-step">
-          <div><%= image_tag "tax2.png" %></div>
+        <div class="key-step reinsurance-icon">
+          <div><%= image_tag "003.png" %></div>
           <p>Flexible rental packages with attractive tax benefits</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-        <div class="key-step">
-          <div><%= image_tag "megaphone.png" %></div>
+        <div class="key-step reinsurance-icon">
+          <div><%= image_tag "004.png" %></div>
           <p>State your company culture through Art</p>
         </div>
       </div>
