--- a/app/assets/stylesheets/pages/_new_exhibition_form.scss
+++ b/app/assets/stylesheets/pages/_new_exhibition_form.scss
@@ -61,6 +61,10 @@ body#form h1, body#form-end h1 {
   font-size: 1.2em;
 }
 
+.painting-fixed {
+  filter: grayscale(100%);
+}
+
 input.btn.btn-primary-bis.btn-lg.btn-block {
     margin-bottom: 100px;
 }
