--- a/app/views/exhibitions/_form.html.erb
+++ b/app/views/exhibitions/_form.html.erb
@@ -8,7 +8,7 @@
   <%= f.input :title, placeholder: 'Name of your exhibition', label: false %>
   <%= f.input :description, placeholder: 'Describe your exhibition', label: false %>
   <%= f.input :address, placeholder: 'Address of your exhibition', label: false %>
-  <%= f.input :photos, as: :attachinary %>
+  <%= f.input :photos, label: 'Now upload photos of your office', as: :attachinary %>
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-8">
       <%= f.button :submit, class: "btn btn-primary-bis btn-lg btn-block" %>
