--- a/app/views/exhibitions/new_step_three.html.erb
+++ b/app/views/exhibitions/new_step_three.html.erb
@@ -96,9 +96,9 @@
           </div>
           <!-- select start date -->
             <div class="form-group string required exhibition_start_date">
-            <input class="form-control string required" id="datetimepicker1" placeholder="Starting date of your exhibition" type="text" name="selected_start_date">
+              <input class="form-control string required" id="datetimepicker1" placeholder="Starting date of your exhibition" type="text" name="selected_start_date">
             </div>
-            <div class="price-preview">
+            <div class="price-preview text-center">
               <p><span class="head-price">Your price:</span><br><span id="exhibition_min_price">0</span>$</p>
             </div>
             <div class="row">
