--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -45,20 +45,20 @@
               <% exhibition.photos.first.nil? ? (exhibition_picture = 'https://unsplash.it/200x200') : (exhibition_picture = exhibition.photos.first.path) %>
               <%= cl_image_tag exhibition_picture, width: 200, height: 200, crop: :fill, class: "product-image dashboard-card hidden-xs"%>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-2">
+            <div class="col-xs-12 col-sm-6 col-md-3">
               <div class="row">
                 <div class="col-xs-12">
                   <p>
-                    <i class="fa fa-heart" aria-hidden="true" id="artist-answers" style="color: #f7c843;"></i> <%= exhibition.bids.count %> <%= pluralize_without_count(exhibition.bids.count, 'artist') %> applied
+                    <i class="fa fa-heart" aria-hidden="true" id="artist-answers" style="color: #f7c843; margin-left: 1px; margin-right: 3px;" ></i> <%= exhibition.bids.count %> <%= pluralize_without_count(exhibition.bids.count, 'artist') %> applied
                   </p>
                 </div>
                 <div class="col-xs-12">
                   <p>
-                    <i class="fa fa-calendar" aria-hidden="true"></i> <%= exhibition.start_date %></p>
+                    <i class="fa fa-calendar" aria-hidden="true" style="margin-left: 1px; margin-right: 5px;""></i> <%= exhibition.start_date %></p>
                 </div>
                 <div class="col-xs-12">
                   <p>
-                    <i class="fa fa-hourglass-half" aria-hidden="true"></i> <%= exhibition.duration %> months
+                    <i class="fa fa-hourglass-half" aria-hidden="true" style="margin-left: 2px; margin-right: 5px;"></i> <%= exhibition.duration %> months
                   </p>
                 </div>
                 <div class="col-xs-12">
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-xs-12">
                   <p>
-                    <i class="fa fa-map-marker" aria-hidden="true" style="margin-left: 4px; margin-right: 8px;"></i> <%= exhibition.address.capitalize %>
+                    <i class="fa fa-map-marker" aria-hidden="true" style="margin-left: 4px; margin-right: 8px;"></i> <%= truncate(exhibition.address.capitalize, 30) %>
                   </p>
                 </div>
                 <div class="col-xs-12">
@@ -80,7 +80,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-5">
+            <div class="col-xs-12 col-sm-6 col-md-4">
               <% if exhibition.description %>
                 <p style="text-align: justify;" >"<%= truncate(exhibition.description, 300) %>"</p>
               <% end %>
