fix grayscale bug

--- a/app/views/exhibitions/new_step_one.html.erb
+++ b/app/views/exhibitions/new_step_one.html.erb
@@ -36,7 +36,7 @@
           </label>
 
           <label>
-            <div class="select-item painting-fixed">
+            <div class="select-item">
               <input type="checkbox" name="selected_categories[]" value="2">
               <div class="artwork-sample">
                 <%= image_tag "painting.png", width: 200, height: 200, crop: :fill %>
