fixed pending yellow

--- a/app/views/dashboard/_list_company_exhibitions.erb
+++ b/app/views/dashboard/_list_company_exhibitions.erb
@@ -119,8 +119,10 @@
                           <% end %>
                         </p>
                         <!-- bid status -->
+
                         <div class="status-toggle" id="status-book-<%= bid.id %>">
-                          <p class="bid-status"><%= bid.status.capitalize %></p>
+                        <% accepted_bid =  exhibition.bids.where(status: "accepted").first %>
+                          <p class="bid-status <%= 'bid-selected' if accepted_bid && accepted_bid == bid %>"><%= bid.status.capitalize %></p>
                         </div>
                       </div>
                     </div>
