fixed yellow payment final page

--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -20,13 +20,13 @@
   margin-bottom: 25px;
 }
 .crReciept h2 {
-  color: $yellow;
+  color: $brand-color;
 }
 .crReciept h3 {
     font-size: 1em;
 }
 .crReciept h3 span{
-  color: $yellow;
+  color: $brand-color;
 }
 
 .crTitle {
