--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,7 +81,7 @@ a.btn.btn-primary.btn-lg.artist-banner {
 }
 
 #custom {
-  background: transparent;
+  background: rgba(0, 0, 0, 0.2);
   color: white;
   border: 3px solid white;
   font-weight: bold;
