--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,21 +26,21 @@
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
             <div><%= image_tag "create.png" %></div>
-            <h3>1-Create your exhibition</h3>
+            <h3>Create your exhibition</h3>
             <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: Your exhibition request is online. </p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
             <div><%= image_tag "artist.png" %></div>
-            <h3>2-Artists apply to your exhibition</h3>
+            <h3>Artists apply to your exhibition</h3>
             <p class="key-content">Our community of hundreds of artists can now see your exhibition request and apply to bring their art in your offices. </p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
             <div><%= image_tag "heart.png" %></div>
-            <h3>3-Pick your favorite Artist</h3>
+            <h3>Pick your favorite Artist</h3>
             <p class="key-content">Finalize the process by picking your favorite artist! Your work stop here, Seeedr takes care of the rest.</p>
           </div>
         </div>
@@ -168,21 +168,21 @@
 <div class="wrapper padded-bottom bg-grey">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini">Discover how le Wagon improved his workplace with us</h2>
+      <h2 class="padded-mini">Discover how Shopify improved his workplace with us</h2>
       <div class="testimonial">
         <div class="col-sm-12 col-md-6">
           <div class="testimonial-content">
-            <img src='<%= image_path "boris.jpg" %>' alt="" class="avatar-large">
-            <h3>Boris Paillard</h3>
-            <p class="status"> CEO of LeWagon</p>
-            <p>"The Parisian office is the flagship of LeWagon’s brand, so it’s the first entrance for people who want to work with us or join our coding school.
-            It is important for us to break the idea that people code in their room or in their garage. Developpers need a creative environment to give their best, and the possibility of changing our decoration every 3 months is an amazing way of doing so. Not only alumnis work here, since we organize once a week conferences/meetups/apero-talks. It is a good opportunity for alumnis to meet entrepreneurs and connect with the tech-eco-system. Art helps break down barriers and is now a new possible way to create social link. I like the idea of renting art from unknown talented artists and change my workplace in a real living art gallery. We just pick a new artist every 3 months and Seeedr takes care of the rest !"</p>
+            <img src='<%= image_path "use-case-img.jpg" %>' alt="" class="avatar-large">
+            <h3>Harley Finkelstein</h3>
+            <p class="status"> Chief Operating Officer @Shopify</p>
+            <p>"Ottawa's office is the flagship of Shophify, so it’s the first entrance for people who want to work with us and all our partners.
+            It is important for us to break the idea that people work in standardized offices. Developpers and all our teams need a creative environment to give their best, and the possibility of changing our decoration every 3 months is an amazing way of doing so. It is a good opportunity for people from outside to understand and discover why our teams are so proud of their office and connect with our culture. Art helps break down barriers and is now a new possible way to create social link. I like the idea of renting art from unknown talented artists and change my workplace in a real living art gallery. We just pick a new artist every 3 months and Seeedr takes care of the rest !"</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
           <div class="testimonial-content iframe-container text-center">
             <div>
-              <iframe src="https://www.youtube.com/embed/tf_oIjOxS2I?ecver=1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/j0dH_V34GSM?ecver=1" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
