--- a/app/assets/stylesheets/pages/_new_exhibition_form.scss
+++ b/app/assets/stylesheets/pages/_new_exhibition_form.scss
@@ -168,6 +168,8 @@ body#form-end .pack-input label span {
 
 body#form-end .price-preview {
     margin-bottom: 60px;
+    margin-left: 150px;
+    margin-top: 4px;
 }
 
 body#form-end .price-preview p {
