--- a/app/views/exhibitions/new_step_one.html.erb
+++ b/app/views/exhibitions/new_step_one.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-md-10 col-md-offset-1">
-      <h1 class="text-center padded-mini">Select your favorites categories</h1>
+      <h1 class="text-center padded-mini">Select your favorite categories</h1>
       <form action="<%= new_step2_exhibitions_path %>">
         <div id="select-artwork">
           <label>
