--- a/app/views/bids/update.js.erb
+++ b/app/views/bids/update.js.erb
@@ -13,13 +13,13 @@ $('.status-toggle:not(#status-book-<%= @bid.id %>)').html("<p class='bid-status'
 //  --------- ok ------------
 
 // 4. doit hider les boutons books des autres classes
-if ($('.toggle-book').val() === 'Unbook') {
+if ($('#button-book-<%= @bid.id %> .toggle-book').val() === 'Unbook') {
   $('#exhibition-<%= @bid.exhibition.id %> .toggle-button:not(#button-book-<%= @bid.id %>)').addClass('hidden');
   // show payment button
   $('#exhibition-<%= @bid.exhibition.id %> #payment_button').removeClass('hidden');
   $('#exhibition-<%= @bid.exhibition.id %> #payment_button').html("<%= j render 'bids/payment_button', bid: @bid %>");
 }
-else if ($('.toggle-book').val() === 'Book this artist') {
+else if ($('#button-book-<%= @bid.id %> .toggle-book').val() === 'Book this artist') {
   $('#exhibition-<%= @bid.exhibition.id %> .toggle-button:not(#button-book-<%= @bid.id %>)').toggleClass('hidden');
   // hide payment button
   $('#exhibition-<%= @bid.exhibition.id %> #payment_button').toggleClass('hidden');
