--- a/app/views/exhibitions/new_step_three.html.erb
+++ b/app/views/exhibitions/new_step_three.html.erb
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
-      <h1 class="text-center">Select your pack</h1>
+      <h1 class="text-center" style="margin-top: 0;">Select your pack</h1>
       <form action="<%= new_exhibition_path %>">
         <% @selected_categories_id.each do |category| %>
           <input type="hidden" name="selected_categories[]" value="<%= category %>">
@@ -38,7 +38,7 @@
         <% end %>
         <input type="hidden" name="selected_price" value>
         <!-- Pack selection -->
-        <div class="form-group radio_buttons optional exhibition_pack padded-mini">
+        <div class="form-group radio_buttons optional exhibition_pack" style="    margin-bottom: 0;">
             <input type="hidden" name="selected_pack" value="">
             <div class="pack-input padded-mini">
               <span class="radio">
@@ -98,12 +98,18 @@
             <div class="form-group string required exhibition_start_date">
               <input class="form-control string required" id="datetimepicker1" placeholder="Starting date of your exhibition" type="text" name="selected_start_date">
             </div>
-            <div class="price-preview text-center">
-              <p><span class="head-price">Your price:</span><br><span id="exhibition_min_price">0</span>$</p>
-            </div>
             <div class="row">
-              <div class="col-xs-12 col-sm-4 col-sm-offset-8">
-                  <input type="submit" class="btn btn-primary-bis btn-lg btn-block" value="Next step">
+              <div class="col-xs-12 col-md-6">
+                <div class="price-preview text-center">
+                  <p><span class="head-price">Your price:</span><br><span id="exhibition_min_price">0</span>$</p>
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <div class="row">
+                  <div class="col-xs-12 col-sm-8 col-sm-offset-4">
+                      <input type="submit" class="btn btn-primary-bis btn-lg btn-block" value="Next step">
+                  </div>
+                </div>
               </div>
             </div>
       </form>
