--- a/app/views/exhibitions/new_step_two.html.erb
+++ b/app/views/exhibitions/new_step_two.html.erb
@@ -24,7 +24,7 @@
             </div>
     </div>
     <div class="col-xs-12 col-md-10 col-md-offset-1">
-      <h1 class="text-center padded-mini" style="padding-top: 0px;">Select your favorites artworks</h1>
+      <h1 class="text-center padded-mini" style="padding-top: 0px;">Select your favorite artworks</h1>
       <form action="<%= new_step3_exhibitions_path %>">
         <% @selected_categories_id.each do |category| %>
           <input type="hidden" name="selected_categories[]" value="<%= category %>">
