--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,7 +61,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content  ">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496772320/Daft_ojjnjm.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "Daft_ojjnjm", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2017 <br> Daft Punk by Riccardo Fano <br> 400mm X 500mm <br> Exclusive edition Giclée Fine Art Print. Printed on 100% cotton, acid-free, heavyweight paper using archival Ultrachrome K3 inks.</p>
             </div>
             <div class="details">
@@ -72,7 +72,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660714/image-sculpture_zxyxpk.jpg", width: 317.48, height: 350,  crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "image-sculpture_zxyxpk", width: 350, height: 350,  crop: :fill, class: 'home-artwork'%>
               <p class="description">2017 <br> Dimensions: 50 x 100 x 60 Cm | Inch <br> Editions: Unique artwork <br> Sculpture: steel on steel</p>
             </div>
             <div class="details">
@@ -83,7 +83,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660149/image-paint2_nuze49.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "image-paint2_nuze49", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2012 <br> Dimensions: 50 x 40 x 1 Cm | Inch <br> Editions: Unique artwork Painting: acrylic on chassis <br> Framing: the artwork is not framed.</p>
             </div>
             <div class="details">
@@ -94,7 +94,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660157/image-digital_aospdv.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "image-digital_aospdv", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2017 <br> This numbered edition Giclée Fine Art Print by Enkel Dika is Printed on 100% cotton, acid-free, heavyweight paper using archival Ultrachrome K3 inks</p>
             </div>
             <div class="details">
@@ -105,7 +105,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660352/image-photo2_advegl.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "image-photo2_advegl", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2010 <br> Dimensions: 90 x 90 x 3 Cm | Inch <br> Editions: Edition of 8 <br>Photography : inkjet on fine art paper <br> Framing: frame in wood white</p>
             </div>
             <div class="details">
@@ -116,7 +116,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660154/image-paint_ggbfdg.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "image-paint_ggbfdg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2015 <br> Dimensions: 101 x 76 Cm | Inch <br> Editions: Unique artwork <br> Painting: acrylic on canvas</p>
             </div>
             <div class="details">
@@ -127,7 +127,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496676584/image-homepage_yprk5w.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "image-homepage_yprk5w", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2016 <br> Dimensions: 100 x 100 Cm | Inch <br> Editions: Unique artwork <br> Painting : aerosol paint on paper</p>
             </div>
             <div class="details">
@@ -138,7 +138,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496773891/max_ycewhb.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "max_ycewhb", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2017 <br> Dimensions: 85 x 77 x 18 Cm | Inch <br> Editions: Unique artwork <br>Sculpture: plastic, iron, Wool on steel </p>
             </div>
             <div class="details">
@@ -149,7 +149,7 @@
        <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496774582/ike_nimhow.jpg", width: 317.48, height: 350, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "ike_nimhow", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">2010 <br> Dimensions: 90 x 90 x 3 Cm | Inch <br> Editions: Edition of 8 <br>Photography : inkjet on fine art paper <br> Framing: frame in wood white</p>
             </div>
             <div class="details">
