bad link on home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="text-center">
-    <%= link_to "Read more", new_exhibition_path, class: "btn btn-primary btn-lg read" %>
+    <%= link_to "Read more", "#", class: "btn btn-primary btn-lg read" %>
   </div>
 </div>
 
