fixed payment new

--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -6,6 +6,13 @@
   width: 100px;
   border-radius: 50%;
 }
+
+.avatar-medium-payment{
+  width: 100px;
+  border-radius: 50%;
+  margin-top: 10px!important;
+}
+
 .avatar-large {
   width: 150px;
   border-radius: 50%;
