--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,46 +1,56 @@
 <div class="wrapper bg-grey">
   <div class="container padded-mini">
-    <h3 class="text-center padded-mini">Your Order is almost complete !</h3>
+    <h3 class="text-center padded-mini">Your order is almost complete !</h3>
       <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3 payment-new">
-          <div class="card padded-mini" style="background: #fff;">
-            <h2 class="text-center"><strong>Summary</strong></h2>
-              <div class="final-informations">
-                <h3>Exhibition's Informations:</h3>
-                <ul>
-                  <li><h3>Start-Date: <%= @order.exhibition.start_date %></h3></li>
-                  <li><h3>End-date: <%= @order.exhibition.end_date %></h3></li>
-                  <li><h3>Your <i class="fa fa-heart-o" aria-hidden="true"></i> Artist: <%= @order.exhibition.bids.where(status:'accepted')[0].user.first_name %> <%= @order.exhibition.bids.where(status:'accepted')[0].user.last_name %></h3></li>
-                </ul>
-              </div>
-                <hr>
-              <div class="guarantees text-center">
-                <h3><strong>Our Guarantees</strong></h3>
-                <ul class="list-inline">
-                  <li><i class="fa fa-truck" aria-hidden="true"></i><br>Deliveries<br>Guaranteed</li>
-                  <li><i class="fa fa-lock" aria-hidden="true"></i><br>Secure<br>Payment</li>
-                  <li><i class="fa fa-check" aria-hidden="true"></i><br>Staging by<br>our Team</li>
-                </ul>
-                <br>
-              </div>
-                <div class="text-center"> <%= form_tag order_payments_path(@order) do %>
-                    <article>
-                      <label class="amount">
-                      <span>Total Price: <%= humanized_money_with_symbol(@order.amount) %></span>
-                      </label>
-                      <div id="fake-stripe-button">Pay with card</div>
-                    </article>
+          <div class="payment-box">
+            <div class="card padded-mini" style="background: #fff;">
+              <h2 class="text-center"><strong>Summary</strong></h2>
+              <hr>
+              <div class="payment-details">
+                <div class="artist-informations">
+                  <div class="text-center">
+                    <h3><strong>Your booking</strong></h3>
+                    <% artist_picture = @order.exhibition.bids.where(status:'accepted')[0].user.photo.path %>
 
-                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                      data-name="My Artist"
-                      data-email="<%= current_user.email %>"
-                      data-description="Artist <%= @order.artist_name %>"
-                      data-amount="<%= @order.amount_cents %>"
-                      data-currency="<%= @order.amount.currency %>"></script>
+                    <% artist_name = "#{@order.exhibition.bids.where(status:'accepted')[0].user.first_name} #{@order.exhibition.bids.where(status:'accepted')[0].user.last_name}" %>
+
+                      <%= cl_image_tag artist_picture, width: 100, height: 100, crop: :fill, class: 'avatar-medium-payment' %><br><%= artist_name %>
+                  </div>
+                </div>
+                <div class="final-informations text-center">
+                  <p><strong><%= @order.exhibition.start_date %></strong> // <strong><%= @order.exhibition.end_date %></strong></p>
+                </div>
+                  <hr>
+                <div class="guarantees text-center">
+                  <h3><strong>Our Guarantees</strong></h3>
+                  <ul class="list-inline">
+                    <li><i class="fa fa-truck" aria-hidden="true"></i><br>Deliveries<br>Guaranteed</li>
+                    <li><i class="fa fa-lock" aria-hidden="true"></i><br>Secure<br>Payment</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i><br>Staging by<br>our Team</li>
+                  </ul>
+                  <br>
                 </div>
               </div>
-          <% end %>
+              <div class="text-center"> <%= form_tag order_payments_path(@order) do %>
+                  <article>
+                    <label class="amount">
+                    <span>Total Price: <%= humanized_money_with_symbol(@order.amount) %></span>
+                    </label>
+                    <div id="fake-stripe-button">Pay with card</div>
+                  </article>
+
+                  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                    data-name="My Artist"
+                    data-email="<%= current_user.email %>"
+                    data-description="Artist <%= @order.artist_name %>"
+                    data-amount="<%= @order.amount_cents %>"
+                    data-currency="<%= @order.amount.currency %>"></script>
+              <% end %>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
   </div>
