--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -42,9 +42,9 @@
 
                   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                     data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                    data-name="My Artist"
-                    data-email="<%= current_user.email %>"
-                    data-description="Artist <%= @order.artist_name %>"
+                    data-name="Payment to Seeedr"
+                    data-email="contact@seeedr.com"
+                    data-description=""
                     data-amount="<%= @order.amount_cents %>"
                     data-currency="<%= @order.amount.currency %>"></script>
               <% end %>
