--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -66,7 +66,7 @@
 
 /* Navbar dropdown menu */
 .navbar-wagon .dropdown .fa.fa-bars.dropdown-toggle {
-  color: $gray;
+  color: white;
   font-size: 24px;
 }
 
