fix bug slideshow home on desktop

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,7 @@
             <p class="key-content">Our community of hundreds of artists can now see your exhibition request and apply to bring their art in your offices. </p>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 text-center">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0 text-center">
           <div class="key-step">
             <div><%= image_tag "heart.png" %></div>
             <h3>Pick your favorite Artist</h3>
@@ -145,7 +145,7 @@
             </div>
           </div>
       </div>
-       <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4">
+       <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
           <div class="artwork-card">
             <div class="content">
               <%= cl_image_tag "ike_nimhow", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
