--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
   <div class="slide" style="background: linear-gradient(155deg, rgba(5, 5, 5, 0.6) 10%, rgba(5, 5, 5, 0.2) 80%), url('<%= image_path "office.jpg" %>');">
   </div>
   <div class="slideshow-content text-center">
-    <h1>Enlighten Your Office with Art</h1>
+    <h1>Brighten Up Your Office with Art</h1>
     <p> Exhibit artists of tomorrow in your office</p>
     <p class="vanity-data"> 300 Artists - 80 exhibitions created </p>
     <%= link_to "Create my exhibit", new_step1_exhibitions_path, class: "btn btn-primary btn-lg", id: "custom" %>
@@ -26,8 +26,8 @@
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
           <div class="key-step">
             <div><%= image_tag "create.png" %></div>
-            <h3>Create your exhibition</h3>
-            <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: Your exhibition request is online. </p>
+            <h3>Create your temporary exhibition</h3>
+            <p class="key-content">Start creating your exhibition request by following the matching-driven form. When you are done, submit it: your exhibition request is online. </p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 text-center">
@@ -57,7 +57,7 @@
 <div class="wrapper padded">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini">Last Artworks from our Artist community</h2>
+      <h2 class="padded-mini">The Latest Artworks from our Artist community</h2>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content  ">
@@ -229,7 +229,7 @@
 <div class="banner banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path "banner-artist.jpg" %>');">
   <!-- condition pour afficher "join our community" que si artiste ou si logged out -->
   <div class="banner-content">
-    <h1>You are an Artist? Start exposing now!</h1>
+    <h1>Are you an Artist? Start exposing now!</h1>
     <p> Join our community and get selected to exhibit your creations in the best offices</p>
     <% if user_signed_in? %>
       <% if current_user.is_company %>
