--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -106,3 +106,10 @@ span.artist-category {
 .smaller-box {
   padding: 0 40px;
 }
+
+
+// alert fix
+.alert {
+  position: relative;
+  z-index: 10;
+}
