fixed wording in dashboard

--- a/app/views/dashboard/dashboard_company.html.erb
+++ b/app/views/dashboard/dashboard_company.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h1 class="underline"><%= current_user.company_name %>'s dashboard</h1>
+        <h1 class="underline"><%= current_user.company_name %>'s exhibitions</h1>
         <div class="dashboard-nav">
         </div>
         <%= render 'list_company_exhibitions' %>
