--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -31,7 +31,7 @@
   background: #469AE0;
 }
 .badge-black {
-  background: black;
+  background: $gray;
 }
 .badge-bordered {
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
